# gamma-gamma-coincidence-analysis

./: .gitignore  README.md
gg/: CMakeLists.txt  main.cc
gg/include/: ggLinkDef.h  ggMainFrame.hh  ggMatrix2.hh
gg/src/: ggMainFrame.cc  ggMatrix2.cc
new/: a.C  ggnew.C  ggnew20201003.C  ggnew20201008.C  ggsee.cc  hGeDelay.C  peaks.C  spec2.cc  test.cc
prompt gg/: README.md  cube.cc  cube.hh  gg.C  ggg.cc  mergecube.sh
